# maker-hub

./: .gitignore  README.md  docker-compose.backend.yml  docker-compose.db.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy-backend.yml
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/backend/: .env.example
apps/web/: .env.example  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
backend/: .env.docker.example  .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260622_0006_feedback.py  20260624_0009_email_verification_codes.py  20260624_0010_user_role_admin.py  20260625_0011_project_official_flag.py
backend/app/: main.py  services.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  projects.py  uploads.py
backend/app/core/: auth.py  config.py  environment.py  logging.py  security.py  startup.py
backend/app/db/: session.py
backend/app/models/: feedback.py  project.py  tag.py  user.py
backend/app/schemas/: admin.py  auth.py  feedback.py  projects.py  uploads.py
backend/scripts/: create_admin_user.py  deploy_backend.sh  docker-entrypoint.sh  init_backend_env.sh  maker-hub.logrotate.example  maker-hub.service  makerhub-backend.service  seed_demo_data.py
backend/tests/: test_environment.py  test_security.py
frontend/: pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
frontend/admin/: package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/portal/: .env.example  next.config.ts  (+3 more)
(+199 files in other folders)
