[project]
name = "makerhub-api"
version = "0.1.0"
description = "FastAPI backend for MakerHub"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.16.0",
  "cos-python-sdk-v5>=1.9.37",
  "fastapi[standard]>=0.116.0",
  "httpx>=0.28.1",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.10.0",
  "python-dotenv>=1.1.0",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "watchfiles>=1.2.0",
]

[tool.uv]
package = false
